--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,8 @@ node_modules
 .idea/
 .idea
 .idea/vcs.xml
-data/data.txt
-data/old.txt
-data/data.txt
+data/
 .DS_Store
 .history/
 .vscode/settings.json
+data/old0.txt
