--- a/package.json
+++ b/package.json
@@ -1,21 +1,7 @@
 {
-  "name": "jinwish",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "jest"
-  },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
-    "moment": "^2.24.0",
+    "express": "^4.17.3",
     "sha256": "^0.2.0",
-    "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1"
-  },
-  "devDependencies": {
-    "jest": "^23.6.0"
+    "socket.io": "^4.4.1"
   }
 }
