--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
+    "crypto": "^1.0.1",
     "express": "^4.17.3",
-    "sha256": "^0.2.0",
     "socket.io": "^4.4.1"
   }
 }
