--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
+    "@arrow-js/core": "^1.0.0-alpha.9",
+    "arrow-js": "^0.1.9",
+    "create-vite": "^4.4.1",
     "crypto": "^1.0.1",
     "express": "^4.17.3",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "vite": "^4.4.7"
   }
 }
