--- a/arrowclient/package.json
+++ b/arrowclient/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@arrow-js/core": "^1.0.0-alpha.9",
     "dayjs": "^1.11.9",
-    "postcss-cli": "^10.1.0"
+    "gun": "^0.2020.1239",
+    "postcss-cli": "^10.1.0",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.15",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3"
   }
