--- a/arrowclient/package.json
+++ b/arrowclient/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@arrow-js/core": "^1.0.0-alpha.9",
     "dayjs": "^1.11.9",
+    "firebase": "^10.3.0",
     "gun": "^0.2020.1239",
     "postcss-cli": "^10.1.0",
     "socket.io": "^4.7.2",
