--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "type":"module",
+  "type": "module",
   "dependencies": {
     "@arrow-js/core": "^1.0.0-alpha.9",
     "arrow-js": "^0.1.9",
     "create-vite": "^4.4.1",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
+    "firebase-admin": "^11.10.1",
     "gun": "^0.2020.1239",
     "socket.io": "^4.4.1",
     "vite": "^4.4.7"
