--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"arrow-js": "^0.1.9",
 		"create-vite": "^4.4.1",
 		"crypto": "^1.0.1",
+		"dayjs": "^1.11.10",
 		"express": "^4.18.2",
 		"firebase": "^10.3.1",
 		"firebase-admin": "^11.10.1",
