--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,5 @@
 {
-  "builds": [
-    {
-      "src": "./app.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/app.js"
-    }
-  ],
-  "scripts": {
-    "build": "cd arrowclient && vite build",
-    "install": "npm install && cd arrowclient && npm install"
-  }
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }],
+  "buildCommand": "cd arrowclient && vite build",
+  "installCommand": "npm install && cd arrowclient && npm install"
 }
