--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "create-vite": "^4.4.1",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.3.1",
     "firebase-admin": "^11.10.1",
