--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^10.3.1",
     "firebase-admin": "^11.10.1",
     "gun": "^0.2020.1239",
+    "howler": "^2.2.4",
     "neo4j-driver": "^5.16.0",
     "socket.io": "^4.4.1",
     "uuid": "^9.0.1",
