--- a/arrowclient/package.json
+++ b/arrowclient/package.json
@@ -16,7 +16,8 @@
     "postcss-cli": "^10.1.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vite": "^5.2.10"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
