--- a/arrowclient/package.json
+++ b/arrowclient/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@arrow-js/core": "^1.0.0-alpha.9",
+    "@arrow-js/core": "1.0.0-alpha.9",
     "dayjs": "^1.11.9",
     "firebase": "^10.3.0",
     "gun": "^0.2020.1239",
