--- a/arrowclient/package.json
+++ b/arrowclient/package.json
@@ -17,6 +17,7 @@
     "postcss-cli": "^10.1.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
+    "sortablejs": "^1.15.6",
     "uuid": "^9.0.1",
     "vite": "^5.2.10"
   },
