--- a/arrowclient/package.json
+++ b/arrowclient/package.json
@@ -18,6 +18,7 @@
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "sortablejs": "^1.15.6",
+    "tailwind": "^4.0.0",
     "uuid": "^9.0.1",
     "vite": "^5.2.10"
   },
