--- a/arrowclient/package.json
+++ b/arrowclient/package.json
@@ -24,7 +24,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.27",
+    "esbuild": "^0.25.0",
+    "postcss": "^8.5.3",
     "tailwindcss": "^3.3.3"
   }
 }
