--- a/arrowclient/package.json
+++ b/arrowclient/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.11.9",
     "firebase": "^10.3.0",
     "gun": "^0.2020.1239",
+    "howler": "^2.2.4",
     "navigo": "^8.11.1",
     "postcss-cli": "^10.1.0",
     "socket.io": "^4.7.2",
